<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        tools:context=".MyPagerAdapter" >

        <TextView
            android:id="@+id/textview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/story2_title"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tips"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/content"
            android:text="@string/story2_tips"
            android:textColor="#333333"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@+id/tips"
            android:layout_below="@+id/textview"
            android:text="@string/story2_content"
            android:textColor="#333333"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>